--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,15 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "doctoc",
+            "label": "doctoc level3",
             "type": "shell",
             "command": "npx doctoc --maxlevel 3 ${file}",
+            "problemMatcher": []
+        },
+        {
+            "label": "doctoc",
+            "type": "shell",
+            "command": "npx doctoc ${file}",
             "problemMatcher": []
         }
     ]
